--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ scikit_learn==1.0.2
 setuptools==65.5.1
 setuptools_git_versioning==1.9.2
 spacy==3.3.0
-pydantic==1.8.2
+pydantic
 python-dotenv==0.20.0
 gitpython>=3.1.30
 gitdb2==3.0.1
